--- a/css/theme.css
+++ b/css/theme.css
@@ -72,6 +72,15 @@ dl, ol, ul {
   font-size: 1.2rem;
 }
 
+ul {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+}
+
+ul li:first-child {
+  font-weight: 700;
+}
+
 dd {
   font-size: 1rem;
 }
