--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -1,7 +1,7 @@
 .btn {
   background-color: var(--color-primary-light);
   color: var(--color-secondary);
-  font-family: var(--font-tertriary);
+  font-family: var(--font-accent);
   background-color: var(--color-primary);
   color: var(--color-secondary);
 }
