--- a/css/theme.css
+++ b/css/theme.css
@@ -5,8 +5,8 @@
   --color-accent: #fcd997;
   --color-neutral-grey: #EBE9E5;
 
-  --font-primary: "BenchNine", sans-serif;
-  --font-secondary: "Dorsa", sans-serif;
+  --font-primary: "bufalino", sans-serif;
+  --font-secondary: "condor-compressed", sans-serif;
   --font-accent: "Capitol", sans-serif;
 }
 
@@ -25,6 +25,7 @@ h1 {
   font-size: 5rem;
   color: #47413F;
   text-transform: uppercase;
+  font-weight: 200;
 }
 
 h2 {
@@ -32,6 +33,7 @@ h2 {
   font-size: 5rem;
   color: #fff;
   text-transform: uppercase;
+  font-weight: 200;
 }
 
 h3 {
@@ -39,6 +41,7 @@ h3 {
   font-size: 3.5rem;
   color: #47413F;
   text-transform: uppercase;
+  font-weight: 200;
 }
 
 h4 {
@@ -46,12 +49,14 @@ h4 {
   font-size: 3rem;
   color: #707070;
   text-transform: uppercase;
+  font-weight: 200;
 }
 
 h5 {
   font-family: var(--font-secondary);
   font-size: 2.25rem;
   text-transform: uppercase;
+  font-weight: 200;
 }
 
 h6 {
@@ -103,7 +108,7 @@ q {
 
 p {
   font-family: var(--font-primary);
-  font-weight: 300;
+  font-weight: 400;
 }
 
 em {
