Add product cards to the file

--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -1,8 +1,7 @@
+/* ad cards */
+
 .card {
   width: 30em;
-}
-
-.card-img {
   position: relative;
 }
 
@@ -10,22 +9,25 @@
   width: 15em;
   position: absolute;
   left: 0;
-  bottom: 50%;
   top: 40%;
   text-align: center;
 }
 
-.button {
-  text-align: center;
-}
-
-.square-card-img {
-  width: 15em;
-  position: relative;
-}
+/* square cards */
 
 .square-card-content {
   position: absolute;
   bottom: 5%;
-  left: 6%;
+  left: 20%;
+}
+
+.square-card {
+  position: relative;
+  width: 15em;
+}
+
+/* product cards */
+
+.product-card {
+  width: 10em;
 }
