--- a/_patterns/banners/banners.css
+++ b/_patterns/banners/banners.css
@@ -2,6 +2,8 @@
 
 .home-banner {
   position: relative;
+  background: linear-gradient(to right, rgba(181, 163, 130, .7), rgba(16, 52, 41, 0)) no-repeat center bottom / 100% 100%, url("../images/home-banner.jpg") no-repeat center top / cover;
+  height: 30em;
 }
 
 .home-banner-content {
