Add similar product cards

--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -31,3 +31,16 @@
 .product-card {
   width: 10em;
 }
+
+/* similar product cards */
+
+.similar-card {
+  position: relative;
+  width: 10em;
+}
+
+.similar-card-content {
+  position: absolute;
+  bottom: 5%;
+  left: 18%;
+}
