--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -46,6 +46,7 @@
 .btn-light {
   background-color: var(--color-primary-light);
   color: var(--color-secondary);
+  padding-top: 10px;
 }
 
 .btn-border-light {
