Add the quantity form item

--- a/_patterns/forms/forms.css
+++ b/_patterns/forms/forms.css
@@ -7,3 +7,14 @@ input, .form-field {
 .search-label {
   display: none;
 }
+
+.quantity {
+  background-color: var(--color-secondary);
+  color: var(--color-neutral-grey);
+  height: 2em;
+  width: 5em;
+}
+
+label {
+  color: var(--color-secondary);
+}
