Add and remove form fields

--- a/_patterns/forms/forms.css
+++ b/_patterns/forms/forms.css
@@ -18,3 +18,11 @@ input, .form-field {
 label {
   color: var(--color-secondary);
 }
+
+.form-item {
+  height: 2em;
+}
+
+.exp-date {
+  width: 5em;
+}
