--- a/_patterns/navigation/navigation.css
+++ b/_patterns/navigation/navigation.css
@@ -6,3 +6,7 @@ a {
 .section-link:hover {
   border-bottom: 1px solid var(--color-primary);
 }
+
+footer {
+  border-top: 2px solid var(--color-primary);
+}
