--- a/_patterns/navigation/navigation.css
+++ b/_patterns/navigation/navigation.css
@@ -3,7 +3,7 @@ a {
   font-weight: 500;
 }
 
-.section-link:hover {
+.section-link:hover, .footer-link:hover {
   border-bottom: 1px solid var(--color-primary);
 }
 
