--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -2,7 +2,11 @@
 
 .card {
   width: 30em;
-  position: relative;
+  background: linear-gradient(to right, rgba(181, 163, 130, .7), rgba(16, 52, 41, 0)) no-repeat center bottom / 100% 100%;
+}
+
+.card-img {
+  z-index: -1;
 }
 
 .card-img-content {
