--- a/_patterns/navigation/navigation.css
+++ b/_patterns/navigation/navigation.css
@@ -7,6 +7,10 @@ a {
   border-bottom: 1px solid var(--color-primary);
 }
 
+.section-link, .footer-link, .page-number-link {
+  transition: all .2s linear;
+}
+
 footer {
   border-top: 2px solid var(--color-primary);
 }
