Add responsive navigation to product category list

--- a/_patterns/navigation/navigation.css
+++ b/_patterns/navigation/navigation.css
@@ -7,10 +7,6 @@ a {
   border-bottom: 1px solid var(--color-primary);
 }
 
-.section-link, .footer-link, .page-number-link {
-  transition: all .2s linear;
-}
-
 footer {
   border-top: 2px solid var(--color-primary);
 }
@@ -32,4 +28,16 @@ footer {
 
 .left-arrow:hover, .right-arrow:hover {
   transform: scale(1.5) rotate(360deg);
+}
+
+.category-nav {
+  text-align: center;
+}
+
+@media only screen and (min-width: 38em) {
+
+  .category-nav {
+    text-align: left;
+  }
+
 }
