--- a/_patterns/navigation/navigation.css
+++ b/_patterns/navigation/navigation.css
@@ -3,19 +3,8 @@ a {
   font-weight: 500;
 }
 
-.section-link:hover, .footer-link:hover {
+.section-link:hover{
   border-bottom: 1px solid var(--color-primary);
-}
-
-footer {
-  border-top: 2px solid var(--color-primary);
-}
-
-.facebook-icon:hover, .twitter-icon:hover, .instagram-icon:hover {
-  transform: scale(1.5) rotate(360deg);
-}
-.facebook-icon, .twitter-icon, .instagram-icon {
-  transition: all 600ms linear;
 }
 
 .page-number-link:hover {
