Add the shopping cart icon next to the search form

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   <title>The Retro</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="/css/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.typekit.net/mxk0huy.css">
 </head>
 <body>
 {% pattern header/header-nav %}
