--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,38 @@
   <link rel="stylesheet" href="https://use.typekit.net/mxk0huy.css">
 </head>
 <body>
-{% pattern header/header-nav %}
-{{content}}
+  <div class="push-2">
+    {% pattern header/header-nav %}
+  </div>
+  <div class="grid max-length push">
+    <div class="unit xs-1 s-1 m-5-6 l-5-6 xl-5-6">
+      {% pattern forms/search-input %}
+    </div>
+    <div class="unit xs-1 s-1 m-1-6 l-1-6 xl-1-6">
+      {% pattern buttons/cart %}
+    </div>
+  </div>
+  <div class="grid wrapper">
+    <div class="gutter-1-4 unit xs-1 s-1 m-1 l-1 xl-1 push-1-2">
+      {% pattern banners/home-banner %}
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-2">
+      {% pattern cards/product-category %}
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-2">
+      {% pattern cards/product-category %}
+    </div>
+    <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 push-1-2">
+      {% pattern cards/shop %}
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-3 xl-1-3 push-1-2">
+      {% pattern cards/shop %}
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-3 xl-1-3 push-1-2">
+      {% pattern cards/shop %}
+    </div>
+  </div>
+
 {% pattern footer/footer %}
 </body>
 </html>
