--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,19 +24,19 @@
       {% pattern banners/home-banner %}
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-2">
-      {% pattern cards/product-category %}
+      {% pattern cards/product-category heading="Retro Electronics" image="retro-radio.jpg" %}
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-2">
-      {% pattern cards/product-category %}
+      {% pattern cards/product-category heading="Retro Accessories" image="type-writer.jpg" %}
     </div>
     <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 push-1-2">
-      {% pattern cards/shop %}
+      {% pattern cards/shop image="polaroid.jpg" %}
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-3 xl-1-3 push-1-2">
-      {% pattern cards/shop %}
+      {% pattern cards/shop image="stereo.jpg" %}
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-3 xl-1-3 push-1-2">
-      {% pattern cards/shop %}
+      {% pattern cards/shop image="radio.jpg" %}
     </div>
   </div>
 
