--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,35 +11,7 @@
   <div class="push-2">
     {% pattern header/header-nav %}
   </div>
-  <div class="grid max-length push">
-    <div class="unit xs-1 s-1 m-5-6 l-5-6 xl-5-6">
-      {% pattern forms/search-input %}
-    </div>
-    <div class="unit xs-1 s-1 m-1-6 l-1-6 xl-1-6">
-      {% pattern buttons/cart %}
-    </div>
-  </div>
-  <div class="grid wrapper">
-    <div class="gutter-1-4 unit xs-1 s-1 m-1 l-1 xl-1 push-1-2">
-      {% pattern banners/home-banner %}
-    </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-2">
-      {% pattern cards/product-category heading="Retro Electronics" image="retro-radio.jpg" %}
-    </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-2">
-      {% pattern cards/product-category heading="Retro Accessories" image="type-writer.jpg" %}
-    </div>
-    <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 push-1-2">
-      {% pattern cards/shop image="polaroid.jpg" %}
-    </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-3 xl-1-3 push-1-2">
-      {% pattern cards/shop image="stereo.jpg" %}
-    </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-3 xl-1-3 push-1-2">
-      {% pattern cards/shop image="radio.jpg" %}
-    </div>
-  </div>
-
+{{content}}
 {% pattern footer/footer %}
 </body>
 </html>
