--- a/_patterns/header/header-nav.css
+++ b/_patterns/header/header-nav.css
@@ -34,6 +34,10 @@ header {
   text-decoration: underline;
 }
 
+.current {
+  text-decoration: underline;
+}
+
 @media only screen and (min-width: 25em) {
 
   .icon-label {
