--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>{{page.name}}</h1>
+<h1>{{page.title}}</h1>
 <p>{{page.description}}</p>
 <img src="{{page.image}}" alt="">
 
