Alter class names

--- a/_patterns/header/header-nav.css
+++ b/_patterns/header/header-nav.css
@@ -1,4 +1,4 @@
-header {
+.header {
   border-bottom: 2px solid var(--color-primary);
   border-top: 2px solid var(--color-primary);
   margin-top: 12em;
@@ -47,7 +47,7 @@ header {
 
 @media only screen and (min-width: 38em) {
 
-  header {
+  .header {
     margin-top: 4em;
   }
 
