Add more sections and styling

--- a/_patterns/sections/sections.css
+++ b/_patterns/sections/sections.css
@@ -6,3 +6,8 @@ section {
   background-color: var(--color-secondary);
   color: var(--color-neutral-grey);
 }
+
+.total-price {
+  border-top: solid 1px var(--color-primary);
+  display: inline-block;
+}
