--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -9,9 +9,9 @@ highlight_nav: electronics
   <div class="unit xs-1 s-1 m-1-6 l-1-6 xl-1-6">
     {% pattern buttons/cart %}
   </div>
-  <div class="push-2 unit xs-1 s-1 m-1 l-1 xl-1 ">
-    {% pattern sections/details header=page.name image=page.image image-2=page.image image-3=page.image image-4=page.image product-image=page.image title="Record Player" text=page.price title-2="Colour" text-2=page.colors title-3="Quantity" title-4="Product Description" text-4=page.description %}
-  </div>
+</div>
+<div class="push-2 wrapper">
+  {% pattern sections/details header=page.name image=page.image image-2=page.image image-3=page.image image-4=page.image product-image=page.image title=page.name text=page.price title-2="Colour" text-2=page.colors title-3="Quantity" title-4="Product Description" text-4=page.description %}
 </div>
 
 <div class="push">
@@ -19,7 +19,7 @@ highlight_nav: electronics
 </div>
 
 
-<div class="grid push-2 gutter-2">
+<div class="grid push-2 gutter-2 wrapper">
   <div class="gutter-1-4 unit xs-1-2 m-1-3 l-1-4 xl-1-4">
     {% pattern cards/similar-product image="camera.jpg" button_text="Shop" button_url="/products/" %}
   </div>
