Add more styling to the page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="push-2">
-    {% pattern header/header-nav %}
+    {% pattern header/header-nav url="/index/" %}
   </div>
 {{content}}
 {% pattern footer/footer %}
