Update more elements

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,6 @@
     {% pattern header/header-nav url="/index/" %}
   </div>
 {{content}}
-{% pattern footer/footer %}
+{% pattern footer/footer url="/privacy/" %}
 </body>
 </html>
