--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -21,15 +21,15 @@ highlight_nav: electronics
 
 <div class="grid push-2 gutter-2 wrapper">
   <div class="gutter-1-4 unit xs-1-2 m-1-3 l-1-4 xl-1-4">
-    {% pattern cards/similar-product image="camera.jpg" button_text="Shop" button_url="/products/" %}
+    {% pattern cards/similar-product image="camera.jpg" button_text="Shop" button_url="/products/" image-url="/products/" %}
   </div>
   <div class="gutter-1-4 unit unit-xs-hidden unit-s-hidden m-1-3 l-1-4 xl-1-4">
-    {% pattern cards/similar-product image="product-type-writer.jpg" button_text="Shop" button_url="/products/" %}
+    {% pattern cards/similar-product image="product-type-writer.jpg" button_text="Shop" button_url="/products/" image-url="/products/" %}
   </div>
   <div class="gutter-1-4 unit unit-xs-hidden unit-s-hidden unit-m-hidden l-1-4 xl-1-4">
-    {% pattern cards/similar-product image="product-radio.jpg" button_text="Shop" button_url="/products/" %}
+    {% pattern cards/similar-product image="product-radio.jpg" button_text="Shop" button_url="/products/" image-url="/products/" %}
   </div>
   <div class="gutter-1-4 unit xs-1-2 s-1-2 m-1-3 l-1-4 xl-1-4">
-    {% pattern cards/similar-product image="product-canon.jpg" button_text="Shop" button_url="/products/" %}
+    {% pattern cards/similar-product image="product-canon.jpg" button_text="Shop" button_url="/products/" image-url="/products/" %}
   </div>
 </div>
